--- a/package.json
+++ b/package.json
@@ -69,9 +69,13 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/string-similarity": "^4.0.2",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
+    "eslint-config-prettier": "^10.1.2",
     "postcss": "^8",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "prisma": "6.0.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
