--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.56.2",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^3.0.1",
     "recharts": "^2.15.3",
