--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "lucide-react": "^0.507.0",
     "next": "14.2.5",
     "next-themes": "^0.4.6",
+    "openai": "^4.97.0",
     "react": "^18",
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
